# dcmfx

./: .gitignore  .releaserc.yml  README.md
src/rust/: Cargo.toml  tmp.sh
src/rust/dcmfx/: Cargo.toml
src/rust/dcmfx/src/: integration_tests.rs  lib.rs
src/rust/dcmfx/tests/: integration_tests.rs  utils.rs
src/rust/dcmfx_anonymize/: Cargo.toml
src/rust/dcmfx_anonymize/src/: lib.rs
src/rust/dcmfx_character_set/: Cargo.toml
src/rust/dcmfx_character_set/src/: lib.rs
src/rust/dcmfx_character_set/src/internal/: character_set.rs  gb_18030.rs  iso_ir_6.rs  jis_x_0208.rs  jis_x_0212.rs  ks_x_1001.rs  lookup_table_16bit.rs  lookup_table_8bit.rs  utf8.rs
src/rust/dcmfx_cli/: Cargo.toml
src/rust/dcmfx_cli/src/: input_source.rs  main.rs  mp4_encoder.rs  photometric_interpretation_arg.rs  transfer_syntax_arg.rs  utils.rs
src/rust/dcmfx_cli/src/args/: decoder_args.rs  default_transfer_syntax_arg.rs  file_list_arg.rs  frame_selection_arg.rs  input_args.rs  jpeg_xl_decoder_arg.rs  mod.rs  photometric_interpretation_arg.rs  planar_configuration_arg.rs  standard_color_palette_arg.rs  transfer_syntax_arg.rs  transform_arg.rs
src/rust/dcmfx_cli/src/commands/: archive_command.rs  create_nrrd_command.rs  dcm_to_json_command.rs  extract_pixel_data_command.rs  get_pixel_data_command.rs  json_to_dcm_command.rs  list_command.rs  mod.rs  modify_command.rs  print_command.rs  rewrite_command.rs  to_dcm_command.rs  to_json_command.rs
src/rust/dcmfx_cli/src/utils/: input_source.rs  mod.rs  mp4_encoder.rs  object_store.rs  output_target.rs
src/rust/dcmfx_cli/tests/: assert_image_snapshot.rs  cli.rs  cli_tests.rs  dcm_to_json.rs  extract_pixel_data_tests.rs  get_pixel_data.rs  get_pixel_data_tests.rs  json_to_dcm.rs  list.rs  modify.rs  print.rs  rewrite.rs  utils.rs
src/rust/dcmfx_cli/tests/snapshots/: cli__json_to_dcm.snap  cli__modify_after.snap  cli__print.snap  cli_tests__dcm_to_json.snap  cli_tests__modify_after.snap  cli_tests__modify_before.snap  cli_tests__modify_in_place_after.snap  cli_tests__modify_in_place_before.snap  cli_tests__print.snap  cli_tests__print_multiple.snap  cli_tests__print_with_options.snap  cli_tests__to_dcm_to_file.snap  cli_tests__to_json.snap  cli_tests__to_json_to_stdout.snap  dcm_to_json__with_multiple_inputs_0.snap  dcm_to_json__with_multiple_inputs_1.snap  dcm_to_json__with_output_directory_0.snap  dcm_to_json__with_output_directory_1.snap  dcm_to_json__with_output_filename.snap  dcm_to_json__with_s3_input_and_output.snap  dcm_to_json__with_selected_data_elements.snap  dcm_to_json__with_stdout_output.snap  dcm_to_json__with_stdout_output_and_include_specific_binary_values.snap  dcm_to_json__with_stdout_output_and_strip_binary_values.snap  dcm_to_json__with_stdout_output_and_strip_binary_values_pretty_print.snap  dcm_to_json__with_stdout_output_and_strip_binary_values_raw.snap  json_to_dcm__with_multiple_inputs_0.snap  json_to_dcm__with_multiple_inputs_1.snap  json_to_dcm__with_output_directory_0.snap  json_to_dcm__with_output_directory_1.snap  json_to_dcm__with_output_filename.snap  json_to_dcm__with_stdout_output.snap  list__with_extension_matches_uppercase_filename_extension.snap  list__with_extension_matches_uppercase_filename_extension_windows.snap  list__with_ignore_pattern.snap  list__with_ignore_pattern_windows.snap  list__with_invalid_directory.snap  list__with_invalid_directory_windows.snap  list__with_json_lines_format.snap  list__with_json_lines_format_summary.snap  (+161 more)
src/rust/dcmfx_core/: Cargo.toml
src/rust/dcmfx_core/src/: code_strings.rs  data_element_tag.rs  data_element_value.rs  data_error.rs  data_set.rs  data_set_path.rs  dictionary.rs  error.rs  iod_module.rs  lib.rs  transfer_syntax.rs  utils.rs  value_multiplicity.rs  value_representation.rs
src/rust/dcmfx_core/src/data_element_value/: age_string.rs  attribute_tag.rs  date.rs  date_time.rs  decimal_string.rs  integer_string.rs  person_name.rs  time.rs  unique_identifier.rs
src/rust/dcmfx_core/src/data_set/: print.rs
src/rust/dcmfx_core/src/iods/: mod.rs  sop_common_module.rs
src/rust/dcmfx_fuzz/: Cargo.toml  fuzz.sh
src/rust/dcmfx_fuzz/src/: main.rs
src/rust/dcmfx_json/: Cargo.toml
src/rust/dcmfx_json/src/: json_config.rs  json_error.rs  lib.rs
src/rust/dcmfx_json/src/internal/: json_to_data_set.rs
src/rust/dcmfx_json/src/transforms/: p10_json_transform.rs
src/rust/dcmfx_p10/: Cargo.toml
src/rust/dcmfx_p10/src/: data_set_builder.rs  io.rs  lib.rs  p10_error.rs  p10_part.rs  p10_read.rs  p10_read_config.rs  p10_token.rs  p10_write.rs  p10_write_config.rs  uids.rs
src/rust/dcmfx_p10/src/internal/: byte_stream.rs  data_element_header.rs  p10_location.rs  value_length.rs
src/rust/dcmfx_p10/src/transforms/: mod.rs  p10_custom_type_transform.rs  p10_filter_transform.rs  p10_insert_transform.rs  p10_print_transform.rs
src/rust/dcmfx_pixel_data/: Cargo.toml  build.rs
src/rust/dcmfx_pixel_data/src/: color_image.rs  grayscale_pipeline.rs  jpeg_xl_jpeg_recompression.rs  lib.rs  lookup_table.rs  monochrome_image.rs  no_std_allocator.rs  overlays.rs  p10_pixel_data_frame_filter.rs  pixel_data_definition.rs  pixel_data_filter.rs  pixel_data_frame.rs  pixel_data_native.rs  pixel_data_reader.rs  pixel_data_renderer.rs  raw_frame.rs  single_channel_image.rs  standard_color_palettes.rs  stored_value_output_cache.rs  utils.rs
src/rust/dcmfx_pixel_data/src/decode/: c_alloc.rs  charls.rs  jpeg.rs  jpeg2k.rs  jpeg_2000.rs  jpeg_decoder.rs  jpeg_xl.rs  jxl_oxide.rs  libjpeg_12bit.rs  libjxl.rs  mod.rs  native.rs  no_std_allocator.rs  openjpeg.rs  openjph.rs  rle_lossless.rs  ybr_to_rgb.rs  zune_jpeg.rs
src/rust/dcmfx_pixel_data/src/encode/: charls.rs  jpeg_2000.rs  jpeg_encoder.rs  libjpeg_12bit.rs  libjxl.rs  mod.rs  native.rs  openjpeg.rs  openjph.rs  rle_lossless.rs
src/rust/dcmfx_pixel_data/tests/: encode_decode_cycle.rs
src/rust/dcmfx_wasm_test/: Cargo.toml
src/rust/dcmfx_wasm_test/src/: main.rs
src/rust/dcmfx_waveform/: Cargo.toml
src/rust/dcmfx_waveform/src/: decode.rs  encode.rs  lib.rs  p10_waveform_chunk_writer.rs  waveform_chunk.rs
(+566 files in other folders)
