[workspace]
resolver = "2"
members = [
  "dcmfx",
  "dcmfx_anonymize",
  "dcmfx_character_set",
  "dcmfx_cli",
  "dcmfx_core",
  "dcmfx_json",
  "dcmfx_p10",
  "dcmfx_pixel_data"
]
exclude = ["dcmfx_fuzz", "dcmfx_wasm_test"]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.88"
authors = ["Richard Viney <richard.viney@gmail.com>"]
repository = "https://github.com/dcmfx/dcmfx"
homepage = "https://dcmfx.github.io"
keywords = ["dicom"]
