[package]
name = "dcmfx"
version = "0.38.0"
description = "Library for working with DICOM and DICOM JSON"
categories = ["wasm"]

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
dcmfx_anonymize = { path = "../dcmfx_anonymize", default-features = false }
dcmfx_character_set = { path = "../dcmfx_character_set", default-features = false }
dcmfx_core = { path = "../dcmfx_core", default-features = false }
dcmfx_json = { path = "../dcmfx_json", default-features = false }
dcmfx_p10 = { path = "../dcmfx_p10", default-features = false }
dcmfx_pixel_data = { path = "../dcmfx_pixel_data", default-features = false }

[dev-dependencies]
either = "1.15.0"
futures = "0.3.31"
image = "0.25.6"
num_cpus = "1.17.0"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = "1.0.219"
serde_json = "1.0.142"
walkdir = "2.5.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros"] }

[features]
default = ["std", "pixel_data_native"]
std = [
  "dcmfx_anonymize/std",
  "dcmfx_character_set/std",
  "dcmfx_core/std",
  "dcmfx_json/std",
  "dcmfx_p10/std",
  "dcmfx_pixel_data/std",
]
async = ["std", "dcmfx_p10/async"]
pixel_data_native = ["dcmfx_pixel_data/native"]
