[package]
name = "dcmfx_anonymize"
version = "0.23.1"
description = "DCMfx anonymize library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
dcmfx_core = { path = "../dcmfx_core", default-features = false }

[features]
default = ["std"]
std = ["dcmfx_core/std"]
