[package]
name = "dcmfx_character_set"
version = "0.35.1"
description = "DCMfx character set library"

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = ["std"]
std = []
