[package]
name = "dcmfx_cli"
version = "0.39.1"
description = "DCMfx CLI tool"
categories = ["command-line-utilities"]

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1.8.11"
aws-sdk-sso = "1.90.0"
bytemuck = "1.23.2"
bytesize = "2.0.1"
clap = { version = "4.5.45", features = ["derive", "wrap_help"] }
comfy-table = "7.1.4"
dcmfx = { path = "../dcmfx", default-features = false, features = [
  "async",
  "std",
] }
futures = "0.3.31"
glob = "0.3.3"
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "png",
] }
num_cpus = "1.17.0"
object_store = { version = "0.12.4", default-features = false, features = [
  "aws",
  "azure",
  "fs",
  "gcp",
] }
owo-colors = "4.2.3"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.48.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "sync",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.17", features = ["io"] }
walkdir = "2.5.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-ng"] }
libc = "0.2.175"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.1"
itertools = "0.14.0"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"

[features]
default = ["pixel_data_native"]
pixel_data_native = ["dcmfx/pixel_data_native"]
