[package]
name = "dcmfx_cli"
version = "0.41.2"
description = "DCMfx CLI tool"
categories = ["command-line-utilities"]

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1.8.13"
aws-credential-types = "1.2.11"
aws-sdk-sso = "1.93.0"
bytemuck = "1.25.0"
bytesize = "2.3.1"
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
comfy-table = "7.2.2"
dcmfx = { path = "../dcmfx", default-features = false, features = [
  "async",
  "std",
] }
futures = "0.3.31"
glob = "0.3.3"
image = { version = "0.25.9", default-features = false, features = [
  "jpeg",
  "png",
] }
num_cpus = "1.17.0"
object_store = { version = "0.13.1", default-features = false, features = [
  "aws",
  "azure",
  "fs",
  "gcp",
] }
owo-colors = "4.2.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "sync",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.18", features = ["io"] }
walkdir = "2.5.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = { version = "1.1.6", default-features = false, features = ["zlib-ng"] }
libc = "0.2.180"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = "1.46.3"
itertools = "0.14.0"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"

[features]
default = ["pixel_data_native"]
pixel_data_native = ["dcmfx/pixel_data_native"]
