[package]
name = "dcmfx_cli"
version = "0.45.2"
description = "DCMfx CLI tool"
categories = ["command-line-utilities"]

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1.8.16"
aws-credential-types = "1.2.14"
aws-sdk-sso = "1.98.0"
bytemuck = "1.25.0"
bytesize = "2.3.1"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
comfy-table = "7.2.2"
dcmfx = { path = "../dcmfx", default-features = false, features = [
  "async",
  "std",
] }
futures = "0.3.32"
glob = "0.3.3"
globset = "0.4.18"
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
] }
num_cpus = "1.17.0"
object_store = { version = "0.13.2", default-features = false, features = [
  "aws",
  "azure",
  "fs",
  "gcp",
] }
owo-colors = "4.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "sync",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.18", features = ["io"] }
walkdir = "2.5.0"

[target.'cfg(not(windows))'.dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-ng"] }
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2.2.1"
insta = "1.47.2"
itertools = "0.14.0"
predicates = "3.1.4"
rand = "0.10.1"
tempfile = "3.27.0"

[features]
default = ["pixel_data_native"]
pixel_data_native = ["dcmfx/pixel_data_native"]
