[package]
name = "dcmfx_core"
version = "0.16.1"
description = "DCMfx core library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
byteorder = "1.5.0"
num-traits = "0.2.19"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
regex = "1.11.1"
supports-color = "3.0.2"
terminal_size = "0.4.2"
unicode-segmentation = "1.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.0"

[features]
default = ["std"]
std = []
