[package]
name = "dcmfx_core"
version = "0.41.2"
description = "DCMfx core library"

repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
byteorder = "1.5.0"
num-traits = "0.2.19"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
regex = "1.12.2"
supports-color = "3.0.2"
terminal_size = "0.4.3"
unicode-segmentation = "1.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[features]
default = ["std"]
std = []
