[package]
name = "dcmfx_p10"
version = "0.16.0"
description = "DCMfx Part 10 library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
byteorder = "1.5.0"
dcmfx_character_set = { path = "../dcmfx_character_set", default-features = false }
dcmfx_core = { path = "../dcmfx_core", default-features = false }
flate2 = "1.1.1"
miniz_oxide = "0.8.8"

[features]
default = ["std"]
std = ["dcmfx_character_set/std", "dcmfx_core/std"]
