[package]
name = "dcmfx_pixel_data"
version = "0.21.0"
description = "DCMfx pixel data library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
bytemuck = "1.23.0"
byteorder = "1.5.0"
dcmfx_core = { path = "../dcmfx_core", default-features = false }
dcmfx_p10 = { path = "../dcmfx_p10", default-features = false }
flate2 = "1.1.1"
image = { version = "0.25.6", default-features = false, features = ["jpeg"] }
jpeg-decoder = { git = "https://github.com/image-rs/jpeg-decoder.git", rev = "95550d7", default-features = false }
jpeg-encoder = "0.6.1"
jxl-oxide = "0.12.2"
miniz_oxide = "0.8.8"
num-traits = "0.2.19"
zune-core = "0.4.12"
zune-jpeg = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm32-unknown-unknown-openbsd-libc = "0.2.0"

[dev-dependencies]
rand = { version = "0.9.1", features = ["small_rng"] }

[build-dependencies]
cc = "1.2.18"
glob = "0.3.2"

[features]
default = ["std"]
std = ["dcmfx_core/std", "dcmfx_p10/std"]
